<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.tripControl.TripControlRegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/fmTripControlRegisterLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/fmTripControlRegisterError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#F44336"
                android:textSize="11sp"
                app:lineHeight="20dp" />

            <EditText
                android:id="@+id/fmTripControlRegisterName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/label_name"
                android:inputType="textPersonName"
                android:textColor="@color/blue"
                android:textColorHint="#050505"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmTripControlRegisterCurrentLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/label_currentLocation"
                android:inputType="textPersonName"
                android:textColor="@color/blue"
                android:textColorHint="#070707"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmTripControlRegisterDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/label_destination"
                android:inputType="textPersonName"
                android:textColor="@color/blue"
                android:textColorHint="#070707"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmTripControlRegisterDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/label_description"
                android:inputType="textPersonName"
                android:textColor="@color/blue"
                android:textColorHint="#050505"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmTripControlRegisterStartDate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/label_start_date"
                android:inputType="date"
                android:shadowColor="#F8F6F6"
                android:textColor="@color/blue"
                android:textColorHint="#101010"
                android:textSize="15sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/fmTripControlRegisterRisk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="15dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="20dp"
                android:text="@string/label_risk"
                android:textColor="@color/blue"
                android:textSize="15sp" />

            <Button
                android:id="@+id/fmTripControlRegisterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_register"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>