<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.tripControl.TripControlSearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fmTripControlSearchTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="Search"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fmTripControlSearchName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName"
            android:textColor="@color/blue"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.467"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fmTripControlSearchTitle" />

        <EditText
            android:id="@+id/fmTripControlSearchDate"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/label_start_date"
            android:inputType="date"
            android:textColor="@color/blue"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmTripControlSearchName"
            app:layout_constraintStart_toStartOf="@+id/fmTripControlSearchName"
            app:layout_constraintTop_toBottomOf="@+id/fmTripControlSearchName" />

        <Button
            android:id="@+id/fmTripControlSearchButtonCancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/label_cancel"
            app:layout_constraintStart_toStartOf="@+id/fmTripControlSearchDate"
            app:layout_constraintTop_toBottomOf="@+id/fmTripControlSearchDate" />

        <Button
            android:id="@+id/fmTripControlSearchButtonSearch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:text="@string/label_search"
            app:layout_constraintBottom_toBottomOf="@+id/fmTripControlSearchButtonCancel"
            app:layout_constraintEnd_toEndOf="@+id/fmTripControlSearchDate"
            app:layout_constraintStart_toEndOf="@+id/fmTripControlSearchButtonCancel"
            app:layout_constraintTop_toTopOf="@+id/fmTripControlSearchButtonCancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>